src/video.h

    typedef cv::KalmanFilter *KalmanFilter;
typedef void *KalmanFilter;
    void CalcOpticalFlowPyrLK(Mat prevImg, Mat nextImg, Mat prevPts, Mat nextPts, Mat status, Mat err);
    void CalcOpticalFlowPyrLKWithParams(Mat prevImg, Mat nextImg, Mat prevPts, Mat nextPts, Mat status, Mat err, Size winSize, int maxLevel, TermCriteria criteria, int flags, double minEigThreshold);
    double FindTransformECC(Mat templateImage, Mat inputImage, Mat warpMatrix, int motionType, TermCriteria criteria, Mat inputMask, int gaussFiltSize);
    void KalmanFilter_Close(KalmanFilter kf);
    Mat KalmanFilter_Correct(KalmanFilter kf, Mat measurement);
    Mat KalmanFilter_GetControlMatrix(KalmanFilter kf);
    Mat KalmanFilter_GetErrorCovPre(KalmanFilter kf);
    Mat KalmanFilter_GetGain(KalmanFilter kf);
    Mat KalmanFilter_GetErrorCovPost(KalmanFilter kf);