packages/dartcv/lib/src/g/video.g.dart


  late final _CalcOpticalFlowFarneback_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              Mat,
              Mat,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Double,
              ffi.Int,
              imp1.CvCallback_0)>>('CalcOpticalFlowFarneback_Async');
  late final _CalcOpticalFlowFarneback_Async =
      _CalcOpticalFlowFarneback_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, double, int, int, int,
              int, double, int, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> CalcOpticalFlowPyrLK(
    Mat prevImg,
    Mat nextImg,
    VecPoint2f prevPts,
    ffi.Pointer<VecPoint2f> nextPts,
    ffi.Pointer<VecUChar> status,
    ffi.Pointer<VecF32> err,
  ) {
    return _CalcOpticalFlowPyrLK(
      prevImg,
      nextImg,
      prevPts,
      nextPts,
      status,
      err,
    );
  }

  late final _CalcOpticalFlowPyrLKPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              Mat,
              VecPoint2f,
              ffi.Pointer<VecPoint2f>,
              ffi.Pointer<VecUChar>,
              ffi.Pointer<VecF32>)>>('CalcOpticalFlowPyrLK');
  late final _CalcOpticalFlowPyrLK = _CalcOpticalFlowPyrLKPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat,
          Mat,
          VecPoint2f,
          ffi.Pointer<VecPoint2f>,
          ffi.Pointer<VecUChar>,
          ffi.Pointer<VecF32>)>();

  ffi.Pointer<CvStatus> CalcOpticalFlowPyrLKWithParams(
    Mat prevImg,
    Mat nextImg,
    VecPoint2f prevPts,
    ffi.Pointer<VecPoint2f> nextPts,
    ffi.Pointer<VecUChar> status,
    ffi.Pointer<VecF32> err,
    CvSize winSize,
    int maxLevel,
    TermCriteria criteria,
    int flags,
    double minEigThreshold,
  ) {
    return _CalcOpticalFlowPyrLKWithParams(
      prevImg,
      nextImg,
      prevPts,
      nextPts,
      status,
      err,
      winSize,
      maxLevel,
      criteria,
      flags,
      minEigThreshold,
    );
  }

  late final _CalcOpticalFlowPyrLKWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              Mat,
              VecPoint2f,
              ffi.Pointer<VecPoint2f>,
              ffi.Pointer<VecUChar>,
              ffi.Pointer<VecF32>,
              CvSize,
              ffi.Int,
              TermCriteria,
              ffi.Int,
              ffi.Double)>>('CalcOpticalFlowPyrLKWithParams');
  late final _CalcOpticalFlowPyrLKWithParams =
      _CalcOpticalFlowPyrLKWithParamsPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              Mat,
              VecPoint2f,
              ffi.Pointer<VecPoint2f>,
              ffi.Pointer<VecUChar>,
              ffi.Pointer<VecF32>,
              CvSize,
              int,
              TermCriteria,
              int,
              double)>();

  ffi.Pointer<CvStatus> CalcOpticalFlowPyrLK_Async(
    Mat prevImg,
    Mat nextImg,
    VecPoint2f prevPts,
    ffi.Pointer<VecPoint2f> nextPts,
    CvSize winSize,
    int maxLevel,
    TermCriteria criteria,
    int flags,
    double minEigThreshold,
    imp1.CvCallback_2 callback,
  ) {
    return _CalcOpticalFlowPyrLK_Async(
      prevImg,
      nextImg,
      prevPts,
      nextPts,
      winSize,
      maxLevel,
      criteria,
      flags,
      minEigThreshold,
      callback,
    );
  }

  late final _CalcOpticalFlowPyrLK_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              Mat,
              VecPoint2f,
              ffi.Pointer<VecPoint2f>,
              CvSize,
              ffi.Int,
              TermCriteria,
              ffi.Int,
              ffi.Double,
              imp1.CvCallback_2)>>('CalcOpticalFlowPyrLK_Async');
  late final _CalcOpticalFlowPyrLK_Async =
      _CalcOpticalFlowPyrLK_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              Mat,
              VecPoint2f,
              ffi.Pointer<VecPoint2f>,
              CvSize,
              int,
              TermCriteria,
              int,
              double,
              imp1.CvCallback_2)>();

  ffi.Pointer<CvStatus> FindTransformECC(
    Mat templateImage,
    Mat inputImage,
    Mat warpMatrix,
    int motionType,
    TermCriteria criteria,
    Mat inputMask,
    int gaussFiltSize,
    ffi.Pointer<ffi.Double> rval,
  ) {
    return _FindTransformECC(
      templateImage,
      inputImage,
      warpMatrix,
      motionType,
      criteria,
      inputMask,
      gaussFiltSize,
      rval,
    );
  }

  late final _FindTransformECCPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, ffi.Int, TermCriteria,
              Mat, ffi.Int, ffi.Pointer<ffi.Double>)>>('FindTransformECC');
  late final _FindTransformECC = _FindTransformECCPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, int, TermCriteria, Mat, int,
          ffi.Pointer<ffi.Double>)>();

  ffi.Pointer<CvStatus> FindTransformECC_Async(
    Mat templateImage,
    Mat inputImage,
    Mat warpMatrix,
    int motionType,
    TermCriteria criteria,
    Mat inputMask,
    int gaussFiltSize,
    imp1.CvCallback_1 callback,
  ) {
    return _FindTransformECC_Async(
      templateImage,
      inputImage,
      warpMatrix,
      motionType,
      criteria,
      inputMask,
      gaussFiltSize,
      callback,
    );
  }

  late final _FindTransformECC_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, ffi.Int, TermCriteria,
              Mat, ffi.Int, imp1.CvCallback_1)>>('FindTransformECC_Async');
  late final _FindTransformECC_Async = _FindTransformECC_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, Mat, int, TermCriteria, Mat, int, imp1.CvCallback_1)>();

  void KalmanFilter_Close(
    KalmanFilterPtr self,
  ) {
    return _KalmanFilter_Close(
      self,
    );
  }

  late final _KalmanFilter_ClosePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(KalmanFilterPtr)>>(
          'KalmanFilter_Close');
  late final _KalmanFilter_Close =
      _KalmanFilter_ClosePtr.asFunction<void Function(KalmanFilterPtr)>();

  ffi.Pointer<CvStatus> KalmanFilter_Correct(
    KalmanFilter self,
    Mat measurement,
    ffi.Pointer<Mat> rval,
  ) {
    return _KalmanFilter_Correct(
      self,
      measurement,
      rval,
    );
  }

  late final _KalmanFilter_CorrectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, Mat, ffi.Pointer<Mat>)>>('KalmanFilter_Correct');
  late final _KalmanFilter_Correct = _KalmanFilter_CorrectPtr.asFunction<
      ffi.Pointer<CvStatus> Function(KalmanFilter, Mat, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> KalmanFilter_Correct_Async(
    KalmanFilter self,
    Mat measurement,
    imp1.CvCallback_1 callback,
  ) {
    return _KalmanFilter_Correct_Async(
      self,
      measurement,
      callback,
    );
  }

  late final _KalmanFilter_Correct_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, Mat,
              imp1.CvCallback_1)>>('KalmanFilter_Correct_Async');
  late final _KalmanFilter_Correct_Async =
      _KalmanFilter_Correct_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, Mat, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetControlMatrix(
    KalmanFilter self,
    ffi.Pointer<Mat> rval,
  ) {
    return _KalmanFilter_GetControlMatrix(
      self,
      rval,
    );
  }

  late final _KalmanFilter_GetControlMatrixPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter,
              ffi.Pointer<Mat>)>>('KalmanFilter_GetControlMatrix');
  late final _KalmanFilter_GetControlMatrix =
      _KalmanFilter_GetControlMatrixPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetControlMatrix_Async(
    KalmanFilter self,
    imp1.CvCallback_1 callback,
  ) {
    return _KalmanFilter_GetControlMatrix_Async(
      self,
      callback,
    );
  }

  late final _KalmanFilter_GetControlMatrix_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter,
              imp1.CvCallback_1)>>('KalmanFilter_GetControlMatrix_Async');
  late final _KalmanFilter_GetControlMatrix_Async =
      _KalmanFilter_GetControlMatrix_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetErrorCovPost(
    KalmanFilter self,
    ffi.Pointer<Mat> rval,
  ) {
    return _KalmanFilter_GetErrorCovPost(
      self,
      rval,
    );
  }

  late final _KalmanFilter_GetErrorCovPostPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, ffi.Pointer<Mat>)>>('KalmanFilter_GetErrorCovPost');
  late final _KalmanFilter_GetErrorCovPost =
      _KalmanFilter_GetErrorCovPostPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetErrorCovPost_Async(
    KalmanFilter self,
    imp1.CvCallback_1 callback,
  ) {
    return _KalmanFilter_GetErrorCovPost_Async(
      self,
      callback,
    );
  }

  late final _KalmanFilter_GetErrorCovPost_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter,
              imp1.CvCallback_1)>>('KalmanFilter_GetErrorCovPost_Async');
  late final _KalmanFilter_GetErrorCovPost_Async =
      _KalmanFilter_GetErrorCovPost_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetErrorCovPre(
    KalmanFilter self,
    ffi.Pointer<Mat> rval,
  ) {
    return _KalmanFilter_GetErrorCovPre(
      self,
      rval,
    );
  }

  late final _KalmanFilter_GetErrorCovPrePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, ffi.Pointer<Mat>)>>('KalmanFilter_GetErrorCovPre');
  late final _KalmanFilter_GetErrorCovPre =
      _KalmanFilter_GetErrorCovPrePtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetErrorCovPre_Async(
    KalmanFilter self,
    imp1.CvCallback_1 callback,
  ) {
    return _KalmanFilter_GetErrorCovPre_Async(
      self,
      callback,
    );
  }

  late final _KalmanFilter_GetErrorCovPre_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter,
              imp1.CvCallback_1)>>('KalmanFilter_GetErrorCovPre_Async');
  late final _KalmanFilter_GetErrorCovPre_Async =
      _KalmanFilter_GetErrorCovPre_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(KalmanFilter, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetGain(
    KalmanFilter self,
    ffi.Pointer<Mat> rval,
  ) {
    return _KalmanFilter_GetGain(
      self,
      rval,
    );
  }

  late final _KalmanFilter_GetGainPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              KalmanFilter, ffi.Pointer<Mat>)>>('KalmanFilter_GetGain');
  late final _KalmanFilter_GetGain = _KalmanFilter_GetGainPtr.asFunction<
      ffi.Pointer<CvStatus> Function(KalmanFilter, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> KalmanFilter_GetGain_Async(
    KalmanFilter self,
    imp1.CvCallback_1 callback,
  ) {
    return _KalmanFilter_GetGain_Async(
      self,
      callback,
    );
  }
